# codecEx

./: CMakeLists.txt  ONBOARDING.md  README.rst  prj.conf  sysbuild.cmake
boards/: nrf54lm20dk_nrf54lm20a_cpuflpr.overlay
src/: main.c
sysbuild/: vpr_launcher_mem.overlay
